# beryl-router

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile.openwrt  README.md  config.example.json  docker-compose.yml
.beads/: issues.jsonl
.cargo/: config.toml
ai/: DECISIONS.md  KNOWLEDGE.md  RESEARCH.md  STATUS.md  TODO.md
ai/design/: API.md  CONFIG.md  CRATES.md  FLASHING.md  NFTABLES.md  OPENWRT_BUILD.md  SYSTEM.md  WIFI.md
beryl-router/: Cargo.toml
beryl-router-common/: Cargo.toml
beryl-router-ebpf/: Cargo.toml
beryl-router-ebpf/src/: main.rs  tc_egress.rs
beryl-router/src/: main.rs
crates/beryl-common/: Cargo.toml
crates/beryl-common/src/: lib.rs
crates/beryl-config/: Cargo.toml
crates/beryl-config/src/: lib.rs
crates/beryl-dhcp/: Cargo.toml
crates/beryl-dhcp/src/: client.rs  database.rs  lib.rs  packet.rs  server.rs
crates/beryl-dns/: Cargo.toml
crates/beryl-dns/src/: lib.rs  resolver.rs  server.rs
crates/beryl-ebpf/: Cargo.toml
crates/beryl-ebpf/src/: lib.rs
crates/beryl-nft/: Cargo.toml
crates/beryl-nft/src/: lib.rs
crates/beryl-wifi/: Cargo.toml
crates/beryl-wifi/src/: lib.rs  manager.rs  uci.rs
src/: actuator.rs  api.rs  main.rs
xtask/src/: main.rs
