[workspace]
resolver = "2"
members = ["beryl-router", "beryl-router-common", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nijaru/beryl-router"

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 3
panic = "abort"

[profile.release]
lto = true
panic = "abort"
