[package]
name = "beryl-routerd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "beryl-routerd"
path = "src/main.rs"

[dependencies]
beryl-common = { path = "crates/beryl-common" }
beryl-config = { path = "crates/beryl-config" }
beryl-ebpf = { path = "crates/beryl-ebpf" }
beryl-nft = { path = "crates/beryl-nft" }
aya.workspace = true
aya-log.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true

[workspace]
resolver = "2"
members = [
    ".",
    "crates/beryl-common",
    "crates/beryl-config",
    "crates/beryl-ebpf",
    "crates/beryl-nft",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nijaru/beryl-router"

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
toml = "0.8"
thiserror = "1"

[profile.dev]
opt-level = 3
panic = "abort"

[profile.release]
lto = true
panic = "abort"