[package]
name = "beryl-router"
version.workspace = true
edition.workspace = true

[dependencies]
aya.workspace = true
aya-log.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
beryl-router-common = { path = "../beryl-router-common" }

[[bin]]
name = "beryl-router"
path = "src/main.rs"
