[package]
name = "beryl-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
aya = { version = "0.13", optional = true }

[features]
default = []
ebpf = []
user = ["serde", "aya"]

# [target.'cfg(not(target_arch = "bpf"))'.dependencies]
# serde = { version = "1", features = ["derive"] }
