[package]
name = "beryl-config"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
beryl-common = { path = "../beryl-common", features = ["serde"] }
beryl-dhcp = { path = "../beryl-dhcp" }
thiserror = "1"